# Graphics

./: README.md
hw1/: hw1  hw1.cpp
hw2/: bmo_hw2.cpp  hw2  hw2.cpp
hw3/: hw3  hw3.cpp  input.txt  input_default.txt  output  spline.cpp  spline.h
hw4/: all_surface_sort_spline.cpp  data.txt  data_orig.txt  hip_spline.cpp  hipper_spline.cpp  hw4  hw4.cpp  hw4.h  spline.cpp  spline.h  spline_interpolation_done.cpp  surface.cpp  surface.h
tutorial/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tutorial  tutorial01.cpp  tutorial02.cpp
